<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/diagnosis_p"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#F7F7F7">

    <View
        android:id="@+id/icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:gravity="center_vertical"
        android:background="@drawable/ic_arrow_back"/>

    <TextView
        android:id="@+id/diagnosis_title"
        android:layout_width="142dp"
        android:layout_height="19dp"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_vertical"
        android:text="@string/diagnosis"
        android:textAppearance="@style/title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textColor="#000"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_diagnosi_form"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="#888"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/gejala_1"
        android:layout_width="116.42dp"
        android:layout_height="20dp"
        android:text="@string/gejala_1"
        android:textAppearance="@style/label"
        android:textSize="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/diagnosis_1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/isi_diagnosis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="220dp"/>

    <TextView
        android:id="@+id/gejala_2"
        android:layout_width="116.42dp"
        android:layout_height="20dp"
        android:text="@string/gejala_2"
        android:textAppearance="@style/label"
        android:textSize="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="290dp"/>

    <EditText
        android:id="@+id/diagnosis_2"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/isi_diagnosis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="310dp"/>

    <TextView
        android:id="@+id/gejala_3"
        android:layout_width="116.42dp"
        android:layout_height="20dp"
        android:text="@string/gejala_3"
        android:textAppearance="@style/label"
        android:textSize="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="380dp"/>

    <EditText
        android:id="@+id/diagnosis_3"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/isi_diagnosis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="400dp"/>

    <TextView
        android:id="@+id/gejala_4"
        android:layout_width="116.42dp"
        android:layout_height="20dp"
        android:text="@string/gejala_4"
        android:textSize="12dp"
        android:textAppearance="@style/label"
        android:layout_marginStart="40dp"
        android:layout_marginTop="470dp"/>

    <EditText
        android:id="@+id/diagnosis_4"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/isi_diagnosis"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="490dp"/>

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/analyze"
        android:textSize="16sp"
        android:background="@drawable/primary_color"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="560dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:background="@drawable/second_button"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="630dp"/>
</RelativeLayout>